--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 
   <link rel="stylesheet" href="style.css" />
 
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+  <!-- link for add plus button and delete button taken from font awesome website beacuse it contains the css of the claases that we are added  -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" /> -->jbjbjb
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
 </head>
@@ -30,6 +31,7 @@
 
       <div class="add-btn">
         <i class="fa-solid fa-plus"></i>
+        <!-- this call is added for the add button which is taken from font awesome and its get its classes which is written in the upper link in head , same as for remove button  -->
       </div>
       <div class="remove-btn">
         <i class="fa-solid fa-xmark"></i>
@@ -53,12 +55,12 @@
 
 
 
-  <!-- Modal -->
+  <!-- Modal Box for task input -->
   <div class="modal-cont">
-
+    <!-- this if for the text area  -->
     <textarea class="textArea-cont" placeholder="Enter Your Task" spellcheck="false">
-
-       </textarea>
+      
+    </textarea>
 
 
     <div class="priority-colors-container">
