Design Task box and header

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <div class="modal-cont">
     <!-- this if for the text area  -->
     <textarea class="textArea-cont" placeholder="Enter Your Task" spellcheck="false">
-      
+      <!-- speel check is to remove the red line below the characters when you write something if it is not the correct word  -->
     </textarea>
 
 
