--- a/index.html
+++ b/index.html
@@ -41,21 +41,22 @@
 
   </div>
 
-
-  <div class="main-cont">
-    <!-- <div class="ticket-cont">
+<!-- Ticket which is showing after saving the task   -->
+  <div class="main-cont"> 
+    <div class="ticket-cont">
             <div class="ticket-color"></div>
             <div class="ticket-id">id 1</div>
             <div class="task-area"> this  is task 1</div>
             <div class="ticket-lock">
               <i class="fa-solid fa-lock"></i>
-           </div> -->
+              <!-- i tag is used for the log  -->
+           </div>
   </div>
   </div>
 
 
 
-  <!-- Modal Box for task input -->
+  <!-- Modal Box for task input , when you click on the add button -->
   <div class="modal-cont">
     <!-- this if for the text area  -->
     <textarea class="textArea-cont" placeholder="Enter Your Task" spellcheck="false">
