--- a/index.html
+++ b/index.html
@@ -41,26 +41,26 @@
 
   </div>
 
-<!-- Ticket which is showing after saving the task   -->
-  <div class="main-cont"> 
-    <div class="ticket-cont">
-            <div class="ticket-color"></div>
-            <div class="ticket-id">id 1</div>
-            <div class="task-area"> this  is task 1</div>
-            <div class="ticket-lock">
-              <i class="fa-solid fa-lock"></i>
-              <!-- i tag is used for the log  -->
-           </div>
+  <!-- Ticket which is showing after saving the task   -->
+  <div class="main-cont">
+    <!-- <div class="ticket-cont">
+      <div class="ticket-color"></div>
+      <div class="ticket-id">id 1</div>
+      <div class="task-area"> this is task 1</div>
+      <div class="ticket-lock">
+        <i class="fa-solid fa-lock"></i>
+        i tag is used for the log  
+      </div>
+    </div> -->
   </div>
-  </div>
 
 
-
+  <!-- speel check is to remove the red line below the characters when you write something if it is not the correct word  -->
   <!-- Modal Box for task input , when you click on the add button -->
   <div class="modal-cont">
     <!-- this if for the text area  -->
     <textarea class="textArea-cont" placeholder="Enter Your Task" spellcheck="false">
-      <!-- speel check is to remove the red line below the characters when you write something if it is not the correct word  -->
+      
     </textarea>
 
 
@@ -73,7 +73,8 @@
 
   </div>
 
-  <!-- <script src="https://unpkg.com/shortid-dist@1.0.5/dist/shortid-2.2.13.min.js"></script> -->
+  <!-- for unique ud generator  -->
+  <script src="https://unpkg.com/shortid-dist@1.0.5/dist/shortid-2.2.13.min.js"></script>
 
   <script src="script.js"></script>
 </body>
