--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
   <link rel="stylesheet" href="style.css" />
 
   <!-- link for add plus button and delete button taken from font awesome website beacuse it contains the css of the claases that we are added  -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+  integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+/>
 
 
 </head>
@@ -50,8 +54,8 @@
       <div class="ticket-lock">
         <i class="fa-solid fa-lock"></i>
         i tag is used for the log  
-      </div>
-    </div> -->
+      </div>-->
+    </div> 
   </div>
 
 
